# ecad_parse

./: .gitignore  Justfile  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: ci.yml
src/ecad_parse/: __init__.py  _odb.py  bom.py  cli.py  netlist.py  query.py
