[project]
name = "ecad-parse"
version = "0.1.0"
description = "ODB++ netlist and BOM extractors"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ecad = "ecad_parse.cli:main"
# Backwards-compatible per-subcommand entry points.
ecad-netlist = "ecad_parse.netlist:main"
ecad-bom = "ecad_parse.bom:main"
ecad-query = "ecad_parse.query:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecad_parse"]
